# semantic-app

./: Dockerfile  README.md  pyproject.toml
artifacts/: pca.joblib
semantic_app/: app.py
tests/: test_semantic_app.py
