[tool.poetry]
name = "semantic_app"
version = "0.1.0"
description = ""
authors = ["Roy Miara <miararoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pinecone-client = "^2.1.0"
openai = "^0.26.5"
transformers = "^4.26.1"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
fastapi = "^0.92.0"
datasets = "^2.9.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
